# ESP32-A2DP-SINK-WITH-CODECS-UPDATED

./: .gitignore  README.md  build_flash.bat
bt_audio_sink/: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
bt_audio_sink/components/ESP32-A2DP/: CMakeLists.txt
bt_audio_sink/components/ESP32-A2DP/src/: BluetoothA2DPOutput.cpp  BluetoothA2DPSink.cpp  BluetoothA2DPSink.h  BluetoothA2DPSinkQueued.cpp
bt_audio_sink/components/arduino-audio-tools/: CMakeLists.txt
bt_audio_sink/components/arduino-audio-tools/src/: AudioToolsConfig.h
bt_audio_sink/main/: CMakeLists.txt  Kconfig.projbuild
bt_audio_sink/main/audio/: audio_pipeline.h  i2s_output.h  overlay_mixer.h  sound_player.h
bt_audio_sink/main/ble/: ble_unified.h
bt_audio_sink/main/config/: app_config.h
bt_audio_sink/main/core/: main.cpp
bt_audio_sink/main/dsp/: dsp_processor.h  fast_math.h
bt_audio_sink/main/input/: encoder_controller.h  seesaw_encoder.h
bt_audio_sink/main/led/: led_config.h  led_controller.h  led_driver_spi.h  led_effects.h  led_strip_encoder.c  led_strip_encoder.h
bt_audio_sink/main/ota/: idf_update.cpp
bt_audio_sink/main/storage/: nvs_settings.h
bt_audio_sink/ota_releases/: 1.1.0.enc  latest.txt
bt_audio_sink/recovery/: CMakeLists.txt  flash_recovery.ps1  sdkconfig  sdkconfig.defaults
bt_audio_sink/recovery/main/: CMakeLists.txt  recovery_main.cpp
bt_audio_sink/tools/: encrypt_firmware.py
esp-idf/components/bt/: CMakeLists.txt
esp-idf/components/bt/common/osi/: thread.c
esp-idf/components/bt/host/bluedroid/: Kconfig.in
(+27 files in other folders)
